# verga

./: .hgignore  AUTHORS  ChangeLog  Class_diagram.dia  Makefile.am  Makefile.in  README  TODO  config.h.in  configure  configure.ac
nbproject/: configurations.xml  project.xml
src/: Makefile.am  Makefile.in
src/common/: Makefile.am  Makefile.in  hash.cpp  logger.hpp  misc.h
src/verga/: Makefile.am  Makefile.in  bytecode.cpp  bytecode.h  channel.cpp  channel.h  circuit.cpp  circuit.h  commands.cpp  directive.cpp  directive.h  error.cpp  error.h  evqueue.cpp  evqueue.h  expr.cpp  expr.h  io.cpp  luthor.lpp  memory.cpp  mitem.cpp  mitem.h  module.cpp  module.h  multint.cpp  net.cpp  net.h  operators.cpp  pathmod.cpp  paux.cpp  release.cpp  specify.cpp  statement.cpp  systask.cpp  systask.h  task.cpp  task.h  thyme.cpp  thyme.h  thyme_config.h  (+10 more)
test/verga/: runtests.sh  trireg1.v  wire1.v
